<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>503</width>
    <height>650</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>20</y>
      <width>461</width>
      <height>571</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="1">
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QLabel" name="label1">
         <property name="text">
          <string>Purchase Id</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="purchase_Id"/>
       </item>
       <item>
        <widget class="QLabel" name="label1_2">
         <property name="text">
          <string>customer id</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="purchase_customerId"/>
       </item>
       <item>
        <widget class="QLabel" name="label1_3">
         <property name="text">
          <string>product id</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="purchase_productId"/>
       </item>
       <item>
        <widget class="QLabel" name="label1_4">
         <property name="text">
          <string>employee id</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="purchase_employeeId"/>
       </item>
       <item>
        <widget class="QLabel" name="label1_5">
         <property name="text">
          <string>price</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="purchase_price"/>
       </item>
       <item>
        <widget class="QLabel" name="label1_6">
         <property name="text">
          <string>quantity</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="purchase_quantity"/>
       </item>
       <item>
        <widget class="QPushButton" name="createPurchase">
         <property name="text">
          <string>Create/Update</string>
         </property>
        </widget>
       </item>
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QPushButton" name="editPurchase">
         <property name="text">
          <string>Edit Purchase</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QTableWidget" name="PurchasesTable">
         <column>
          <property name="text">
           <string>purchase Id</string>
          </property>
         </column>
         <column>
          <property name="text">
           <string>customer id</string>
          </property>
         </column>
         <column>
          <property name="text">
           <string>product id</string>
          </property>
         </column>
         <column>
          <property name="text">
           <string>employee id</string>
          </property>
         </column>
         <column>
          <property name="text">
           <string>price</string>
          </property>
         </column>
         <column>
          <property name="text">
           <string>quantity</string>
          </property>
         </column>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="deletePurchase">
         <property name="text">
          <string>Delete Purchase</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item row="0" column="2">
      <spacer name="verticalSpacer_2">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
     <item row="0" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>503</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuClasses">
    <property name="title">
     <string>Classes</string>
    </property>
    <addaction name="actionClient"/>
    <addaction name="actionEmployee"/>
    <addaction name="actionProduct"/>
   </widget>
   <addaction name="menuClasses"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionClient">
   <property name="text">
    <string>Client</string>
   </property>
  </action>
  <action name="actionEmployee">
   <property name="text">
    <string>Employee</string>
   </property>
  </action>
  <action name="actionProduct">
   <property name="text">
    <string>Product</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
